# excalidraw-architect-mcp

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
.skills/excalidraw-diagram-design/: SKILL.md
sample_diagrams/: 01_system_architecture.excalidraw  02_auth_flow.excalidraw  03_microservices_dark.excalidraw  04_before_edit.excalidraw  05_local_delivery_service.excalidraw  06_repo_architecture.excalidraw  07_logic_flow.excalidraw  08_llm_generated_delivery.excalidraw  09_llm_raw_delivery.excalidraw  ipf_cron_architecture.excalidraw  test_excalidraw_ipf.excalidraw
src/excalidraw_mcp/: __init__.py  __main__.py  server.py
src/excalidraw_mcp/core/: __init__.py  components.py  models.py  themes.py
src/excalidraw_mcp/engine/: __init__.py  layout.py  renderer.py
src/excalidraw_mcp/export/: __init__.py  svg_exporter.py
src/excalidraw_mcp/parsers/: __init__.py  mermaid.py  state.py
tests/: generate_all_diagrams.py  test_export.py  test_layout.py
